Revision history for Plerd

{{$NEXT}}

      - Adding support for "dist"-style installation and configuration of Plerd, making it appropriate for distribution via CPAN.
      
      - Adding an --init command to plerdall. (Thanks to Rebecca Turner for the suggestion.)

1.601 2018-08-11

      - Fixing a bug that prevented the Webmention-receiving plerdwatcher process from accepting webmentions for posts created after it launched.

      - Adding a (commented-out) `<link rel="webmention [...] />` element to the set of sample templates. (Thanks to Karen Cravens for the bug report.)
      
      - Separating the display of replies versus uncategorized webmentions, in the sample templates.
      
      - Retroactively adding a bunch of entries to the 1.6 Changelog entry that I forgot about in the excitement of the Webmention stuff.

1.6   2018-08-05

      - Adding experimental support for Webmention sending, receiving, and display.
     
      - If a template fails to process, Plerd will now die with a meaningful error message.
     
      - Adding a post_with_url method to Plerd objects.
     
      - Adding Microformats2 metadata to the sample templates.

1.55  2018-03-07

      - Switching away from a naive copy of Text::SmartyPants in favor of a custom fork of same (Plerd::SmartyPants). As a result, Plerd inserts higher-than-ASCII characters like curly-quotes and emdashes directly into its UTF-8 output, rather than using HTML entities. This avoids problems arising from mixing HTML entities with other modules' entity-escaping code.

1.54  2018-02-17

      - Improving how Plerd handles UTF-8 source and template files. (Much like v1.44, except I think I got it right this time.)

      - Adding mention of v1.52's alt-text improvement to the documentation.
     
1.53  2017-10-29

      - Fixing a bug where Markdown symbols, if present in the first paragraph of a post's source file, would appear in default social-media description tags.
